--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
             <title>Potato Clicker</title>
             <link rel="stylesheet" href="index.css">
+            <link rel="icon" type="image/x-icon" href="images/betaclick.jpg">
         </head>
 
         <body>
