Added Mine to upgrades

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                     <p id="farmerNumber">You have 0 farmers</p>
                 </div>
 
-              
                     <div class="upgrd">
                         <p>Buy 1 Farm</p>
                         <img src="images/farm.jpg" id="farm-el">
@@ -32,6 +31,13 @@
                         <p id="factoryCost">550 Potatoes</p>
                         <p id="factoryNumber">You have 0 factories</p>
                     </div>
+                    <div class="upgrd">
+                        <p>Buy 1 Mine</p>
+                        <img src="images/mine.jpg" id="mine-el">
+                        <p id="mineCost">1384 Potatoes</p>
+                        <p id="mineNumber">You have 0 mines</p>
+                    </div>
+
                     </div>
                     <button class="btn" id="deletebtn"><h1 id="deletetxt">DELETE SAVE</h1></button>
             <script src="index.js"></script>
