Added 2 more upgrades

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <body>
             <img id="mainimg" src="images/potato.png">
             <h1 id="clicks">You have 0 potatoes</h1>
+            <h3 id="potato/s">You are making 0 potatoes every second</h3>
             
             <div id="upgrades">
                 <div class="upgrd">
@@ -36,6 +37,20 @@
                         <img src="images/mine.jpg" id="mine-el">
                         <p id="mineCost">1384 Potatoes</p>
                         <p id="mineNumber">You have 0 mines</p>
+                    </div>
+
+                    <div class="upgrd">
+                        <p>Buy 1 Baker</p>
+                        <img src="images/baker.png" id="baker-el">
+                        <p id="bakerCost">16234 Potatoes</p>
+                        <p id="bakerNumber">You have 0 bakers</p>
+                    </div>
+
+                    <div class="upgrd">
+                        <p>Buy 1 bank</p>
+                        <img src="images/bank.png" id="bank-el">
+                        <p id="bankCost">45832 Potatoes</p>
+                        <p id="bankNumber">You have 0 banks</p>
                     </div>
 
                     </div>
