--- a/index.html
+++ b/index.html
@@ -1,60 +1,85 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <title>Potato Clicker</title>
-            <link rel="stylesheet" href="index.css">
-            <link rel="icon" type="image/x-icon" href="images/betaclick.jpg">
-        </head>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no"
+    />
 
-        <body>
-            <img id="mainimg" src="images/potato.png">
-            <h1 id="clicks">You have 0 potatoes</h1>
-            <h3 id="potato/s">You are making 0 potatoes every second</h3>
-            
-            <div id="upgrades">
-                <div class="upgrd">
-                    <p>Buy 1 Farmer</p>
-                    <img src="images/farmer.jpg" id="farmer-el">
-                    <p id="farmerCost">12 Potatoes</p>
-                    <p id="farmerNumber">You have 0 farmers</p>
-                </div>
+    <!--     IMPORTING FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 
-                    <div class="upgrd">
-                        <p>Buy 1 Farm</p>
-                        <img src="images/farm.jpg" id="farm-el">
-                        <p id="farmCost">100 Potatoes</p>
-                        <p id="farmNumber">You have 0 farms</p>
-                    </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-                    <div class="upgrd">
-                        <p>Buy 1 Factory</p>
-                        <img src="images/factory.png" id="factory-el">
-                        <p id="factoryCost">550 Potatoes</p>
-                        <p id="factoryNumber">You have 0 factories</p>
-                    </div>
-                    <div class="upgrd">
-                        <p>Buy 1 Mine</p>
-                        <img src="images/mine.jpg" id="mine-el">
-                        <p id="mineCost">1384 Potatoes</p>
-                        <p id="mineNumber">You have 0 mines</p>
-                    </div>
+    <title>Potato Clicker</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main class="top">
+      <h1 id="potatoText">You have 0 Potatos</h1>
+      <button id="potato">
+        <img
+          src="images/potato.png"
+          id="potato--img"
+        />
+      </button>
+    </main>
 
-                    <div class="upgrd">
-                        <p>Buy 1 Baker</p>
-                        <img src="images/baker.png" id="baker-el">
-                        <p id="bakerCost">16234 Potatoes</p>
-                        <p id="bakerNumber">You have 0 bakers</p>
-                    </div>
+    <nav class="sidebar">
+      <button class="sidebar--button" id="option1"></button>
+      <button class="sidebar--button" id="option2"></button>
+    </nav>
 
-                    <div class="upgrd">
-                        <p>Buy 1 bank</p>
-                        <img src="images/bank.png" id="bank-el">
-                        <p id="bankCost">45832 Potatoes</p>
-                        <p id="bankNumber">You have 0 banks</p>
-                    </div>
+    <section class="bottom" id="bottom">
+      <section class="workers" id="workers">
+        <button id="farmer" class="upgrade">Farmer (Cost: 12, Owned: 0)</button>
 
-                    </div>
-                    <button class="btn" id="deletebtn"><h1 id="deletetxt">DELETE SAVE</h1></button>
-            <script src="index.js"></script>
-        </body>
-    </html>
+        <button id="baker" class="upgrade">Baker (Cost: 50, Owned: 0)</button>
+      </section>
+
+      <section class="upgrades" id="upgrades">
+        <button id="clickCount" class="upgrade">
+          +1 Click (Cost: 100, Owned: 1x)
+        </button>
+
+        <button id="multiplier" class="upgrade">
+          +0.1x Multiplier (Cost: 100, Owned: 1.0x)
+        </button>
+      </section>
+    </section>
+
+    <div id="statMenu">
+      <div class="menu--content">
+        <h3 id="subText">You are making 0 Potatos every second</h3>
+        <button id="stat--close">Close</button>
+      </div>
+    </div>
+
+    <div id="settingMenu">
+      <div class="menu--content">
+        <button id="setting--close" class="setting--button">Close</button>
+        <button id="style--button" class="setting--button">Light Mode</button>
+        <button id="delete" class="setting--button">DELETE SAVE</button>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
+  </body>
+</html>
