--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       rel="stylesheet"
     />
 
+    <link rel="icon" type="image/x-icon" href="images/potato.png">
     <title>Potato Clicker</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -52,6 +53,8 @@
         <button id="farmer" class="upgrade">Farmer (Cost: 12, Owned: 0)</button>
 
         <button id="baker" class="upgrade">Baker (Cost: 50, Owned: 0)</button>
+
+        <button id="place holder" class="upgrade">Place holder (Cost: 1000, Owned: 0)</button>
       </section>
 
       <section class="upgrades" id="upgrades">
@@ -76,6 +79,7 @@
       <div class="menu--content">
         <button id="setting--close" class="setting--button">Close</button>
         <button id="style--button" class="setting--button">Light Mode</button>
+        <button id="music--button" class="setting--button">Music</button>
         <button id="delete" class="setting--button">DELETE SAVE</button>
       </div>
     </div>
